--- a/css2.css
+++ b/css2.css
@@ -43,13 +43,13 @@ span:hover {
     background-color: #838383;
     height: 10%;
     position: relative;
-    background: linear-gradient(45deg, #4c4c4c, #838383);
+    background: linear-gradient(45deg, #4c4c4c, #333);
     /* Thêm gradient cho background */
 }
 
 .section-header {
     margin: 20px 0;
-    background-color: #282829;
+    background-color: #333;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -63,7 +63,7 @@ span:hover {
     list-style: none;
     padding: 0;
     margin: 0;
-    border-bottom: 2px solid #e1e1e1;
+    border-bottom: 2px solid #333;
 }
 
 .tabs a {
@@ -120,7 +120,7 @@ span:hover {
     margin: 5px;
     font-family: "Times New Roman", Times, serif;
     font-size: 16px;
-    border: 1px solid #ffffff;
+    border: 1px solid #333;
     border-radius: 5px;
     outline: none;
     transition: all 0.3s ease;
